styling.  Creating web-api dir for new rust web API.

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -10,8 +10,10 @@ html, body {
 }
 a:link {
   color: #b3e0ff; /* very light blue */
+  text-decoration: none;
 }
 
 a:visited {
   color: #e0b3ff; /* very light purple */
+  text-decoration: none;
 }
